--- a/app/src/main/res/layout/fragment_register_confirm.xml
+++ b/app/src/main/res/layout/fragment_register_confirm.xml
@@ -1,11 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingEnd="30dp"
-    android:paddingStart="30dp">
+    android:layout_marginEnd="30dp"
+    android:layout_marginStart="30dp"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,54 +13,35 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:text="@string/title"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="bold"/>
 
-    <TextView
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="@string/national_id"
-        android:textSize="16sp"/>
-
     <EditText
-        android:id="@+id/national_id"
-        android:layout_width="200dp"
+        android:id="@+id/activation_code"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"/>
-
-    <TextView
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="@string/pin_code"
-        android:textSize="16sp"/>
-
-    <EditText
-        android:id="@+id/pin_code"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:hint="@string/activation_code"
         android:textSize="16sp"/>
 
     <Button
-        android:id="@+id/log_in"
+        android:id="@+id/verify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@android:color/holo_blue_light"
-        android:text="@string/log_in"
+        android:text="@string/verify"
         android:textAllCaps="false"
         android:textColor="@android:color/white"/>
 
     <Button
-        android:id="@+id/forgot_pin"
+        android:id="@+id/resend_pin_sms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
         android:background="@null"
-        android:text="@string/forgot_pin"
+        android:text="@string/resend_pin_sms"
         android:textAllCaps="false"
         android:textColor="@android:color/holo_blue_light"/>
 
