--- a/app/src/main/res/layout/activity_forgotten_pin.xml
+++ b/app/src/main/res/layout/activity_forgotten_pin.xml
@@ -7,12 +7,18 @@
     android:paddingEnd="30dp"
     android:paddingStart="30dp">
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/dark_text_color"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
-        android:text="@string/title"
+        android:text="@string/have_you_forgot_your_pin"
         android:textSize="18sp"
         android:textStyle="bold"/>
 
@@ -21,13 +27,20 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="@string/phone_number"
+        android:text="@string/national_id"
         android:textSize="16sp"/>
 
     <EditText
         android:id="@+id/phone_number"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:textSize="16sp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/your_new_pin_will_be_sent_to_your_notification_number"
         android:textSize="16sp"/>
 
     <Button
@@ -39,5 +52,23 @@
         android:text="@string/send_new_pin"
         android:textAllCaps="false"
         android:textColor="@android:color/white"/>
+
+    <Button
+        android:id="@+id/do_you_remember_it"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@null"
+        android:text="@string/do_you_remember_it"
+        android:textAllCaps="false"
+        android:textColor="@android:color/holo_blue_light"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="20dp"
+        android:text="Visit www.xaba.org"
+        android:textSize="16sp"/>
 
 </LinearLayout>
