--- a/app/src/main/res/layout/fragment_register_worker.xml
+++ b/app/src/main/res/layout/fragment_register_worker.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/national_id_used_for_authentication_and_validation"
+            android:text="@string/national_id"
             android:textSize="16sp"/>
 
         <EditText
@@ -48,41 +48,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/preferred_language_of_communication"
-            android:textSize="16sp"/>
-
-        <LinearLayout
-            android:id="@+id/grp_language"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal"
-            tools:ignore="UseCompoundDrawables">
-
-            <TextView
-                android:id="@+id/txt_language_selection"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/select_language"
-                android:textColor="@color/dark_text_color"
-                android:textSize="16sp"
-                tools:ignore="MissingPrefix"/>
-
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:src="@drawable/down_arrow"/>
-
-        </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
