--- a/app/src/main/res/layout/fragment_wizard_step_one.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_one.xml
@@ -1,23 +1,88 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingEnd="30dp"
     android:paddingStart="30dp">
 
-    <ImageView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="@android:color/holo_blue_light"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/country"
+        android:textSize="16sp"/>
+
+    <LinearLayout
+        android:id="@+id/grp_country"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
+
+        <TextView
+            android:id="@+id/txt_country_selection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/select_country"
+            android:textColor="@color/dark_text_color"
+            android:textSize="16sp"
+            tools:ignore="MissingPrefix"/>
+
+        <ImageView
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/down_arrow"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/language"
+        android:textSize="16sp"/>
+
+    <LinearLayout
+        android:id="@+id/grp_language"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
+
+        <TextView
+            android:id="@+id/txt_language_selection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/select_preferred_language"
+            android:textColor="@color/dark_text_color"
+            android:textSize="16sp"
+            tools:ignore="MissingPrefix"/>
+
+        <ImageView
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/down_arrow"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="@string/get_an_account"
+        android:text="@string/welcome_to_xaba"
         android:textSize="18sp"
         android:textStyle="bold"/>
 
@@ -30,10 +95,20 @@
         android:textSize="16sp"/>
 
     <Button
+        android:id="@+id/register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:background="@null"
+        android:text="@string/register_now"
+        android:textAllCaps="false"
+        android:textColor="@android:color/holo_blue_light"/>
+
+    <Button
         android:id="@+id/next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:background="@android:color/holo_blue_light"
         android:text="@string/next"
         android:textAllCaps="false"
