--- a/app/src/main/res/layout/activity_forgotten_pin.xml
+++ b/app/src/main/res/layout/activity_forgotten_pin.xml
@@ -2,16 +2,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingEnd="30dp"
     android:paddingStart="30dp">
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/dark_text_color"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/xaba_red_logo"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,56 +20,42 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:text="@string/have_you_forgot_your_pin"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="@string/national_id"
-        android:textSize="16sp"/>
+        android:textColor="@color/dark_color"
+        android:textSize="20sp"/>
 
     <EditText
-        android:id="@+id/phone_number"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"/>
+        android:id="@+id/national_id"
+        style="@style/EditText"
+        android:layout_marginTop="20dp"
+        android:hint="@string/national_id"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/your_new_pin_will_be_sent_to_your_notification_number"
+        android:textColor="@color/dark_color"
         android:textSize="16sp"/>
 
     <Button
         android:id="@+id/send_new_pin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:background="@android:color/holo_blue_light"
-        android:text="@string/send_new_pin"
-        android:textAllCaps="false"
-        android:textColor="@android:color/white"/>
+        style="@style/ButtonGreen"
+        android:layout_marginTop="20dp"
+        android:text="@string/send_new_pin"/>
 
     <Button
         android:id="@+id/do_you_remember_it"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/ButtonLink"
         android:layout_marginTop="5dp"
-        android:background="@null"
-        android:text="@string/do_you_remember_it"
-        android:textAllCaps="false"
-        android:textColor="@android:color/holo_blue_light"/>
+        android:text="@string/do_you_remember_it"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="70dp"
         android:text="Visit www.xaba.org"
+        android:textColor="@color/green_color"
         android:textSize="16sp"/>
 
 </LinearLayout>
