--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,10 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="dark_color">#4c4c4c</color>
+    <color name="green_color">#77bd1e</color>
+    <color name="gray_color">#b5b5b5</color>
+
     <color name="white">#FFFFFF</color>
     <color name="gray">#e7e7e8</color>
     <color name="dark_text_color">#2a2a2a</color>
